--- a/index.html/Untitled-1.html
+++ b/index.html/Untitled-1.html
@@ -9,8 +9,9 @@
     <h1>Juan Lorenzo</h1>
     <ul>
         <li>País que quiero visitar: Italia</li>
-        <li>Plato favorito: Paella, pero una barbacoa americana o una asado me gustaria probar</li>
+        <li>Utlimo viaje: playa</li>
         <li>Hobby: Leer libros, ver peliculas</li>
+        <li>Nombre de la primera mascota : brandol</li>
     </ul>
 </body>
 </html>
